# MRO_project

./: .coveragerc  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_18_1321-27d811817dc4_create_plane.py  2025_12_21_1923-79b604fe4913_add_nullable_for_manufacturer_date_.py
app/: main.py
app/api/: __init__.py
app/core/: config.py  paths.py  templates.py
app/core/models/: base.py  db_helper.py  plane.py
app/crud/: plane.py
app/database/: db_helper.py
app/models/: base.py  plane.py
app/routers/: plane.py
app/routers/web/: add_new_aircraft.py  dashboard.py
app/schemas/: plane.py
app/static/css/: add_new_aircraft.css  dashboard.css
app/static/js/: add_new_aircraft.js  dashboard.js
app/templates/: add_new_aircraft.html  start_dashboard.html
app/tests/app/models/: plane.py
app/tests/app/utils/: test_case_converter.py
app/utils/: case_converter.py
docker/: docker-compose.yml
tests/unit/: test_case_converter.py  test_schemas_plane.py
