[tool.poetry]
name = 'MRO_project'
version = '0.1.0'
description = 'MRO system project'
authors = ['Daniskin <danis_90@mail.ru>']
package-mode = false

[tool.poetry.dependencies]
python = '^3.11'
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
