[tool.poetry]
name = 'MRO_project'
version = '0.1.0'
description = 'MRO system project'
authors = ['Daniskin <danis_90@mail.ru>']
package-mode = false

[tool.poetry.dependencies]
python = '^3.11'
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"
jinja2 = "^3.1.6"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = [
  "--import-mode=prepend",
  "--cov=app",
  "--cov-report=term-missing"
]
asyncio_mode = "auto"
markers = [
  "unit: fast unit tests (no DB, no network)",
  "integration: tests with DB/external services",
  "api: tests for HTTP endpoints"
]
